--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -18,7 +18,7 @@ Version: 3.0
 @import url("revolutionslider.css");
 
 /*Google Fonts*/
-@import url("../../../fonts.googleapis.com/css7dee.css?family=Open+Sans:300,400,500,600,700,800");
+@import url("https://fonts.googleapis.com/css7dee.css?family=Open+Sans:300,400,500,600,700,800");
 @import url('https://fonts.googleapis.com/css?family=Nunito:300,400,600,600i,700,800&amp;subset=latin-ext');
 
 /*=================
