Hotel Detail View

--- a/templates/hotel/index.html
+++ b/templates/hotel/index.html
@@ -251,147 +251,37 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="simple_slick_carousel_block utf_dots_nav">
-                        <div class="utf_carousel_item"> <a href="listings_single_page_1.html"
+                        
+                        {% for hotel in hotels %}
+                        <div class="utf_carousel_item"> <a href="{% url 'hotel:hotel-detail' hotel.slug %}"
                                 class="utf_listing_item-container compact">
-                                <div class="utf_listing_item"> <img src="{% static 'images/utf_listing_item-01.jpg' %}"
+                                <div class="utf_listing_item"> <img src="{{hotel.image.url}}"
                                         alt=""> <span class="tag"><i class="im im-icon-Chef-Hat"></i> Restaurant</span>
-                                    <span class="featured_tag">Featured</span>
+                                    
+                                    {% if hotel.featured == True %}
+                                        <span class="featured_tag">Featured</span>
+                                    {% endif %}
                                     <span class="utf_open_now">Open Now</span>
                                     <div class="utf_listing_item_content">
-                                        <div class="utf_listing_prige_block">
+                                        <!-- <div class="utf_listing_prige_block">
                                             <span class="utf_meta_listing_price"><i class="fa fa-tag"></i> $25 -
                                                 $55</span>
                                             <span class="utp_approve_item"><i class="utf_approve_listing"></i></span>
-                                        </div>
-                                        <h3>Chontaduro Barcelona</h3>
-                                        <span><i class="fa fa-map-marker"></i> The Ritz-Carlton, Hong Kong</span>
-                                        <span><i class="fa fa-phone"></i> (+15) 124-796-3633</span>
+                                        </div> -->
+                                        <h3>{{hotel.name}}</h3>
+                                        <span><i class="fa fa-map-marker"></i> {{hotel.address}}</span>
+                                        <span><i class="fa fa-phone"></i> {{hotel.mobile}}</span>
+                                        <span><i class="fa fa-envelope"></i> {{hotel.email}}</span>
                                     </div>
                                 </div>
                                 <div class="utf_star_rating_section" data-rating="4.5">
                                     <div class="utf_counter_star_rating">(4.5)</div>
-                                    <span class="utf_view_count"><i class="fa fa-eye"></i> 822+</span>
+                                    <span class="utf_view_count"><i class="fa fa-eye"></i> {{hotel.views}}</span>
                                     <span class="like-icon"></span>
                                 </div>
                             </a>
                         </div>
-
-                        <div class="utf_carousel_item"> <a href="listings_single_page_1.html"
-                                class="utf_listing_item-container compact">
-                                <div class="utf_listing_item"> <img src="{% static 'images/utf_listing_item-02.jpg' %}"
-                                        alt=""> <span class="tag"><i class="im im-icon-Electric-Guitar"></i>
-                                        Events</span>
-                                    <div class="utf_listing_item_content">
-                                        <div class="utf_listing_prige_block">
-                                            <span class="utf_meta_listing_price"><i class="fa fa-tag"></i> $45 -
-                                                $70</span>
-                                        </div>
-                                        <h3>The Lounge & Bar</h3>
-                                        <span><i class="fa fa-map-marker"></i> The Ritz-Carlton, Hong Kong</span>
-                                        <span><i class="fa fa-phone"></i> (+15) 124-796-3633</span>
-                                    </div>
-                                </div>
-                                <div class="utf_star_rating_section" data-rating="4.5">
-                                    <div class="utf_counter_star_rating">(4.5)</div>
-                                    <span class="utf_view_count"><i class="fa fa-eye"></i> 822+</span>
-                                    <span class="like-icon"></span>
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="utf_carousel_item"> <a href="listings_single_page_1.html"
-                                class="utf_listing_item-container compact">
-                                <div class="utf_listing_item"> <img src="{% static 'images/utf_listing_item-03.jpg' %}"
-                                        alt=""> <span class="tag"><i class="im im-icon-Hotel"></i> Hotels</span>
-                                    <span class="utf_closed">Closed</span>
-                                    <div class="utf_listing_item_content">
-                                        <div class="utf_listing_prige_block">
-                                            <span class="utf_meta_listing_price"><i class="fa fa-tag"></i> $25 -
-                                                $55</span>
-                                        </div>
-                                        <h3>Westfield Sydney</h3>
-                                        <span><i class="fa fa-map-marker"></i> The Ritz-Carlton, Hong Kong</span>
-                                        <span><i class="fa fa-phone"></i> (+15) 124-796-3633</span>
-                                    </div>
-                                </div>
-                                <div class="utf_star_rating_section" data-rating="4.5">
-                                    <div class="utf_counter_star_rating">(4.5)</div>
-                                    <span class="utf_view_count"><i class="fa fa-eye"></i> 822+</span>
-                                    <span class="like-icon"></span>
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="utf_carousel_item"> <a href="listings_single_page_1.html"
-                                class="utf_listing_item-container compact">
-                                <div class="utf_listing_item"> <img src="{% static 'images/utf_listing_item-04.jpg' %}"
-                                        alt=""> <span class="tag"><i class="im im-icon-Dumbbell"></i> Fitness</span>
-                                    <div class="utf_listing_item_content">
-                                        <div class="utf_listing_prige_block">
-                                            <span class="utf_meta_listing_price"><i class="fa fa-tag"></i> $45 -
-                                                $70</span>
-                                            <span class="utp_approve_item"><i class="utf_approve_listing"></i></span>
-                                        </div>
-                                        <h3>Ruby Beauty Center</h3>
-                                        <span><i class="fa fa-map-marker"></i> The Ritz-Carlton, Hong Kong</span>
-                                        <span><i class="fa fa-phone"></i> (+15) 124-796-3633</span>
-                                    </div>
-                                </div>
-                                <div class="utf_star_rating_section" data-rating="4.5">
-                                    <div class="utf_counter_star_rating">(4.5)</div>
-                                    <span class="utf_view_count"><i class="fa fa-eye"></i> 822+</span>
-                                    <span class="like-icon"></span>
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="utf_carousel_item"> <a href="listings_single_page_1.html"
-                                class="utf_listing_item-container compact">
-                                <div class="utf_listing_item"> <img src="{% static 'images/utf_listing_item-05.jpg' %}"
-                                        alt=""> <span class="tag"><i class="im im-icon-Hotel"></i> Hotels</span> <span
-                                        class="featured_tag">Featured</span>
-                                    <span class="utf_closed">Closed</span>
-                                    <div class="utf_listing_item_content">
-                                        <div class="utf_listing_prige_block">
-                                            <span class="utf_meta_listing_price"><i class="fa fa-tag"></i> $45 -
-                                                $70</span>
-                                        </div>
-                                        <h3>UK Fitness Club</h3>
-                                        <span><i class="fa fa-map-marker"></i> The Ritz-Carlton, Hong Kong</span>
-                                        <span><i class="fa fa-phone"></i> (+15) 124-796-3633</span>
-                                    </div>
-                                </div>
-                                <div class="utf_star_rating_section" data-rating="4.5">
-                                    <div class="utf_counter_star_rating">(4.5)</div>
-                                    <span class="utf_view_count"><i class="fa fa-eye"></i> 822+</span>
-                                    <span class="like-icon"></span>
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="utf_carousel_item"> <a href="listings_single_page_1.html"
-                                class="utf_listing_item-container compact">
-                                <div class="utf_listing_item"> <img src="{% static 'images/utf_listing_item-06.jpg' %}"
-                                        alt=""> <span class="tag"><i class="im im-icon-Chef-Hat"></i> Restaurant</span>
-                                    <span class="utf_open_now">Open Now</span>
-                                    <div class="utf_listing_item_content">
-                                        <div class="utf_listing_prige_block">
-                                            <span class="utf_meta_listing_price"><i class="fa fa-tag"></i> $25 -
-                                                $45</span>
-                                            <span class="utp_approve_item"><i class="utf_approve_listing"></i></span>
-                                        </div>
-                                        <h3>Fairmont Pacific Rim</h3>
-                                        <span><i class="fa fa-map-marker"></i> The Ritz-Carlton, Hong Kong</span>
-                                        <span><i class="fa fa-phone"></i> (+15) 124-796-3633</span>
-                                    </div>
-                                </div>
-                                <div class="utf_star_rating_section" data-rating="4.5">
-                                    <div class="utf_counter_star_rating">(4.5)</div>
-                                    <span class="utf_view_count"><i class="fa fa-eye"></i> 822+</span>
-                                    <span class="like-icon"></span>
-                                </div>
-                            </a>
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
