--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -288,6 +288,12 @@
             }
         });	
     </script>
+
+    
+    {% block javascript %}
+        
+    {% endblock javascript %}
+        
     <script src="{% static 'scripts/extensions/themepunch.tools.min.js' %}"></script>
     <script src="{% static 'scripts/extensions/themepunch.revolution.min.js' %}"></script>
     <script src="{% static 'scripts/extensions/revolution.extension.actions.min.js' %}"></script>
