--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -184,6 +184,7 @@
     <script src="{% static 'scripts/tooltips.min.js' %}"></script>
     <script src="{% static 'scripts/color_switcher.js' %}"></script>
     <script src="{% static 'scripts/jquery_custom.js' %}"></script>
+    <script src="{% static 'scripts/custom.js' %}"></script>
     <script>
         var tpj = jQuery;
         var revapi4;
